styles added to icons in projects

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -34,7 +34,7 @@
       "repository_links": [
         "https://github.com/didonatodani/chefs-choice-app"
       ],
-      "deployed_version_link": "hhttps://chefs-choice-app.netlify.app/"
+      "deployed_version_link": "https://chefs-choice-app.netlify.app/"
     },
     {
       "project_name": "MIETIS - WebDev & UX/UI Students MVP",
